--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,7 @@
-include_directories(${GLUT_INCLUDE_DIR})
-add_executable(test test.cpp)
-target_link_libraries(test ${GLUT_LIBRARY} ${OPENGL_LIBRARY})
+include_directories(
+    ${GLUT_INCLUDE_DIR} 
+    ${EIGEN_INCLUDE_DIR}
+)
+
+add_executable(mesh_viewer mesh_viewer.cpp)
+target_link_libraries(mesh_viewer ${GLUT_LIBRARY} ${OPENGL_LIBRARY})
